--- a/demo/basic.html
+++ b/demo/basic.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>cropit</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../dist/jquery.cropit.js"></script>
+    <script src="../dist/cropit.js"></script>
 
     <style>
       .cropit-preview {
@@ -34,7 +33,7 @@
     </style>
   </head>
   <body>
-    <div class="image-editor">
+    <div id="cropper" class="image-editor">
       <input type="file" class="cropit-image-input">
       <div class="cropit-preview"></div>
       <div class="image-size-label">
@@ -44,29 +43,29 @@
       <button class="rotate-ccw">Rotate counterclockwise</button>
       <button class="rotate-cw">Rotate clockwise</button>
 
-      <button class="export">Export</button>
+      <button id="export" class="export">Export</button>
     </div>
 
     <script>
-      $(function() {
-        $('.image-editor').cropit({
+      (function() {
+        var cropper = new cropit(document.getElementById('cropper'), {
           imageState: {
-            src: 'http://lorempixel.com/500/400/',
+            src: 'images/hands.jpg',
           },
         });
 
-        $('.rotate-cw').click(function() {
+        /*$('.rotate-cw').click(function() {
           $('.image-editor').cropit('rotateCW');
         });
         $('.rotate-ccw').click(function() {
           $('.image-editor').cropit('rotateCCW');
         });
-
-        $('.export').click(function() {
-          var imageData = $('.image-editor').cropit('export');
+*/
+        document.getElementById('export').addEventListener('click', function() {
+          var imageData = cropper.getCroppedImageData();
           window.open(imageData);
         });
-      });
+      })();
     </script>
   </body>
 </html>
